--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -14,6 +14,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.typeAliasesPackage=com.ly.imp4m.common.model
 mybatis.mapperLocations=classpath:mapper/*.xml
 
+mapper.mappers=tk.mybatis.mapper.common.Mapper
+mapper.notEmpty=true
+
 # PageHelper
 pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
