完善后台影片列表页面

--- a/src/main/resources/application-loc.properties
+++ b/src/main/resources/application-loc.properties
@@ -5,7 +5,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/video_resource_playback_site_s
   &createDatabaseIfNotExist=true\
   &characterEncoding=utf8\
   &useSSL=false\
-  &serverTimezone=Asia/Shanghai
+  &serverTimezone=Asia/Shanghai\
+  &allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=mysql246810*
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
