--- a/vrps-sply/src/main/resources/application-loc.properties
+++ b/vrps-sply/src/main/resources/application-loc.properties
@@ -46,3 +46,6 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=1000MB
 upload.file.path=/upload/
 
+admin.account.id=e354cf56072b422c9b68e83fa82afd6e
+admin.role.id=96dd75eadca94862987bb0ac89af20af
+
